--- a/config/config.env
+++ b/config/config.env
@@ -1,4 +1,4 @@
-AWS_ACCESS_KEY_ID=AKIARPIITYJ5DF22T74T
-AWS_SECRET_ACCESS_KEY=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
-AWS_REGION=global
-SNS_TOPIC_ARN=arn:aws:sns:us-east-2:101486674554:ResidentAlertss
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
+SNS_TOPIC_ARN=
